# user-documentation

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  poetry.toml  pyproject.toml  requirements.txt  sitemap.xml
.circleci/: config.yml
.github/workflows/: ci.yml  docs.yml
advanced/: index.html
advanced/evaluation_functions/: index.html
advanced/placeholder/: index.html
dev_eval_function_docs/GCSEenglish/: index.html
dev_eval_function_docs/arrayEqual/: index.html
dev_eval_function_docs/arraySymbolicEqual/: index.html
dev_eval_function_docs/buckinghamPiTheorem/: index.html
dev_eval_function_docs/chatGPT (experimental)/: index.html
dev_eval_function_docs/compareBoolean/: index.html
dev_eval_function_docs/compareConstructs/: index.html
dev_eval_function_docs/compareExpressions/: index.html
dev_eval_function_docs/comparePhysicalQuantities/: index.html
dev_eval_function_docs/comparePython/: index.html
dev_eval_function_docs/compareSets/: index.html
dev_eval_function_docs/graphEval/: index.html
dev_eval_function_docs/isExactEqual/: index.html
dev_eval_function_docs/isSimilar/: index.html
dev_eval_function_docs/langModels/: index.html
dev_eval_function_docs/latexEqual/: index.html
dev_eval_function_docs/linearAlgebra/: index.html
docs/: architecture.md  index.md  opportunities.md  publications.md  terminology.md
events/: index.html
opportunities/: index.html
publications/: index.html
releases/: index.html
search/: search_index.json
student/: index.html
teacher/: index.html
terminology/: index.html
(+227 files in other folders)
