[tool.poetry]
name = "user-documentation"
version = "0.1.0"
description = "Lambda Feedback User Documentation built using MkDocs"
authors = ["Andreas Pfurtscheller <1051396+aplr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
evaldocsloader = { git = "https://github.com/lambda-feedback/EvalDocsLoader.git", branch = "main" }

[tool.poetry.dev-dependencies]
# evaldocsloader = { path = "../evaluation-docs-loader", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
